Página principal con cards

--- a/less/navbar-visitor.less
+++ b/less/navbar-visitor.less
@@ -4,7 +4,8 @@
 nav {
 	background-color: @blue;
 	font-family: 'News Cycle', sans-serif;
-	
+	margin-bottom: 0px;
+
 	ul li a {
 		font-weight: bold;
 		font-size: 14pt;
@@ -13,10 +14,6 @@ nav {
 	#search-icon i {
 		font-size: 30pt;
 	}
-	// .brand-logo span {
-	// 	border: 1px solid black;
-	// 	margin-top: -15px;
-	// }
 
 	.brand-logo {
 		margin-left: 15px;
@@ -26,5 +23,19 @@ nav {
 		margin-bottom: -12px;
 		height: 50px;
 		width: 50px;
+	}
+}
+
+.side-nav {
+	background-color: @blue;
+	font-family: 'News Cycle', sans-serif;
+
+	li a {
+		color: white;
+		font-size: 14pt;
+	}
+
+	li a i {
+		font-size: 30pt;
 	}
 }
