--- a/less/index-style.less
+++ b/less/index-style.less
@@ -1,4 +1,6 @@
 @yellow: #ffff8c;
+@blue: #00BBD3;
+@deeper-blue: #0096a6;
 
 html, body {
 	height: 100%;
@@ -9,8 +11,16 @@ html, body {
 }
 
 .search  {
-	background-color: @yellow;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: white;
 	display: none;
+	margin-bottom: 0px;
+	-webkit-box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
+box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
+	position: absolute;
+	z-index: 100;
+	width: 100%;
 	.material-icons {
 		font-size: 30pt;
 	}
@@ -27,3 +37,130 @@ html, body {
 	}
 	
 }
+
+nav.nav-extended {
+
+	.tabs {
+		width: fit-content;
+	}
+}
+
+//Cards
+#cards-container {
+	padding: 50px 130px 30px 130px;
+	.columna-1, .columna-2 {
+	}
+
+	.card {
+		margin-top: 30px;
+		-webkit-box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
+
+		img {
+			z-index: 1;
+		}
+
+		.sale {
+			position: absolute;
+			background: orange;
+			color: white;
+			height:3.3rem;
+			width:3.3rem;
+			text-align: center;
+			vertical-align: middle;
+			line-height: 3.3rem;
+			// margin: 45vh 45vw;
+			transform: rotate(-20deg);
+			// animation: beat 1s ease infinite alternate;
+			bottom: 90%;
+			left: 85%;
+			font-size: 1.5em;
+			z-index: 2;
+
+			&:before,
+			&:after {
+				content:"";
+				position: absolute;
+				background: inherit;
+				height: inherit;
+				width: inherit;
+				top: 0;
+				left: 0;
+				z-index: -1;
+				transform: rotate(30deg);
+			}
+			&:after {
+				transform: rotate(60deg);
+			}
+		}
+
+		span {
+			color: white;
+			font-size: 14pt;
+			text-align: left;
+			float: left;
+		}
+
+		.action {
+			padding: 0px 0px 0px 0px;
+			margin: 0px;
+			
+			.title {
+				background-color: rgba(0, 0, 0, 0.7);
+			}
+
+			a {
+				text-transform: capitalize;
+				width: 100%;
+				padding-right: 0px;
+				padding-left: 8px;
+				// background-color: rgba(0, 0, 0, 0.7);
+				background: linear-gradient(to left, rgba(0, 0, 0, 0.7); 50%, @deeper-blue 50%);
+			    background-size: 200% 100%;
+			    background-position:right bottom;
+			    transition:all 1s ease;
+
+				i {
+					width: 20%;
+					font-size: 2em;
+					background-color: @deeper-blue;
+					
+
+				}
+
+				span {
+					width: 60%;
+				}
+			}
+		}
+		
+	}
+	
+	.card:hover {
+		cursor: pointer;
+	}
+
+	.card:hover a {
+		background-position:left bottom;
+	}
+
+	//Carta destacada 
+	.small-card {
+		a span {
+			font-size: 12pt;
+		}
+
+		a i.material-icons {
+			font-size: 18pt;
+		}
+
+		.sale { 
+			height:2.7rem;
+			width:2.7rem;
+			line-height: 2.7rem;
+			font-size: 1.3em;
+		}
+	}
+}
+
