--- a/less/index-style.less
+++ b/less/index-style.less
@@ -37,9 +37,14 @@ box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
 	}
 	
 }
-
+#tabs-fixed {
+	position: fixed;
+	margin-top: 0px;
+	background-color: @deeper-blue;
+	z-index: 3;
+	display: none;
+}
 nav.nav-extended {
-
 	.tabs {
 		width: fit-content;
 	}
