--- a/less/registrarse-style.less
+++ b/less/registrarse-style.less
@@ -7,13 +7,40 @@ html, body {
 	// font-family: 'Roboto Mono', monospace;
 }
 
-form {
+.search  {
+	background-color: rgba(0, 0, 0, 0.7);
+	color: white;
+	display: none;
+	margin-bottom: 0px;
+	-webkit-box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
+box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
+	position: absolute;
+	z-index: 100;
+	width: 100%;
+	.material-icons {
+		font-size: 30pt;
+	}
+	
+	input {
+		font-size: 2.3em;
+		border:none !important;
+		box-shadow: none !important;
+	}
+
+	input[type="text"]:focus {
+		border:none !important;
+		box-shadow: none !important;
+	}
+	
+}
+
+form.formulario {
 	margin: 0 auto;
-	margin-top: 20px;
+	margin-top: 40px;
 	font-size: 14pt;
-	width: 40%;
-	// border: 1px solid black;
-	width: 40vw;
+	width: 50vw;
+
 	a.btn {
 		text-transform: capitalize;
 	}
@@ -24,7 +51,7 @@ form {
 	}
 
 	input[type="text"],  input[type="password"], input[type="email"] {
-		background-color: #FFFCB7;
+		background-color: #FFFEDB;
 	}
 	
 	.err-msg {
