--- a/less/navbar-visitor.less
+++ b/less/navbar-visitor.less
@@ -5,6 +5,7 @@ nav {
 	background-color: @blue;
 	font-family: 'News Cycle', sans-serif;
 	margin-bottom: 0px;
+	z-index: 1;
 
 	ul li a {
 		font-weight: bold;
