--- a/less/index-style.less
+++ b/less/index-style.less
@@ -38,6 +38,75 @@ box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
 	
 }
 
+.carousel-item  {
+	// text-align: right;
+	
+	.info {
+		margin-top: 80px;
+		width: fit-content;
+		float: right;
+		text-align: right;
+		h1 {
+			font-size: 35pt;
+			background-color: rgba(0, 0, 0, 0.5);
+			margin: 0;
+			margin-top: 10px;
+			// width: fit-content;
+			// float: right;
+			// width: fit-content;
+			// float: right;
+		}
+
+		.descuento {
+			// width: fit-content;
+			// float: right;
+			h1 {
+				width: fit-content;
+				float: right;
+
+			}
+		}
+	}
+}
+#bici {
+	// height:100%;
+	display:table;
+	width: 100%;
+	padding: 0;
+	background: url(../img/bici.png) no-repeat no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding-right: 120px;
+}
+
+#hospital {
+	// height:100%;
+	display:table;
+	width: 100%;
+	padding: 0;
+	background: url(../img/hospital.jpg) no-repeat no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding-right: 120px;
+}
+
+#beats {
+	// height:100%;
+	display:table;
+	width: 100%;
+	padding: 0;
+	background: url(../img/beats.jpg) no-repeat no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding-right: 120px;
+}
+
 .fixed {
     top: 56px;
     z-index: 100;
@@ -65,9 +134,9 @@ nav.nav-extended {
 		-webkit-box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
-
 		img {
 			z-index: 1;
+			max-height: 400px;
 		}
 
 		.sale {
