--- a/less/index-style.less
+++ b/less/index-style.less
@@ -223,8 +223,33 @@ box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 		background-position:left bottom;
 	}
 
-	//Carta destacada 
+	//Carta pequeña 
 	.small-card {
+		a span {
+			font-size: 11pt;
+		}
+
+		a i.material-icons {
+			font-size: 18pt;
+		}
+		
+		img {
+			height: 170px;
+		}
+		.sale { 
+			height:2.7rem;
+			width:2.7rem;
+			line-height: 2.7rem;
+			font-size: 1.3em;
+		}
+	}
+
+	.big-card {
+
+		img {
+			height: 340px;
+		}
+
 		a span {
 			font-size: 12pt;
 		}
@@ -233,12 +258,6 @@ box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 			font-size: 18pt;
 		}
 
-		.sale { 
-			height:2.7rem;
-			width:2.7rem;
-			line-height: 2.7rem;
-			font-size: 1.3em;
-		}
 	}
 }
 
