--- a/less/registrarse-style.less
+++ b/less/registrarse-style.less
@@ -15,7 +15,7 @@ html, body {
 	-webkit-box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
 -moz-box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
 box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
-	position: absolute;
+	position: fixed;
 	z-index: 100;
 	width: 100%;
 	.material-icons {
@@ -58,17 +58,14 @@ form.formulario {
 		height: 80%;
 		font-size: 14pt;
 		margin-top: 2px;
-		margin-bottom: 5px;
+		margin-bottom: 0px;
 		// background-color: #FFC1C1;
 		// border: 1px solid #FF5050;
 		color: red;
 		font-weight: bold;
 		display: none;
 	}
-	
-	#correo-existe {
-		display: inline-block;
-	}
+
 
 	label {
 		font-size: 14pt;
