--- a/less/registrarse-style.less
+++ b/less/registrarse-style.less
@@ -37,11 +37,14 @@ box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
 
 form.formulario {
 	margin: 0 auto;
-	margin-top: 40px;
+	margin-top: 30px;
 	font-size: 14pt;
 	width: 50vw;
-
-	a.btn {
+	
+	h3 {
+		margin-bottom: 0px;
+	}
+	a.btn {	
 		text-transform: capitalize;
 	}
 
