Con archivos por borrar

--- a/less/index-style.less
+++ b/less/index-style.less
@@ -136,7 +136,7 @@ nav.nav-extended {
 		-webkit-box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
-		img {
+		.image {
 			z-index: 1;
 			max-height: 400px;
 		}
@@ -235,8 +235,12 @@ box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 			font-size: 18pt;
 		}
 		
-		img {
+		.image {
 			height: 170px;
+		}
+
+		img {
+			min-height: 170px;
 		}
 		.sale { 
 			height:2.7rem;
@@ -247,8 +251,7 @@ box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 	}
 
 	.big-card {
-
-		img {
+		.image {
 			height: 340px;
 		}
 
