--- a/less/index-style.less
+++ b/less/index-style.less
@@ -108,7 +108,7 @@ box-shadow: -1px 6px 21px -2px rgba(0,0,0,0.75);
 }
 
 .fixed {
-    top: 56px;
+    top: 60px;
     z-index: 100;
   	position: fixed;
     width: 100%;
@@ -263,6 +263,36 @@ box-shadow: 10px 10px 19px -9px rgba(0,0,0,0.75);
 			font-size: 18pt;
 		}
 
+	}
+}
+
+@media (max-width: 1200px) {
+
+.carousel-item .info h1 {
+	font-size: 25pt;
+}
+  #cards-container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .fixed {
+    	top: 60px;
+	}
+}
+
+@media (max-width: 900px) {
+	.carousel-item .info h1 {
+		font-size: 20pt;
+	}
+
+  #cards-container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .fixed {
+    	top: 56px;
 	}
 }
 
